--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,11 @@
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-#                            ------------------------                              #
-#                            PosCommands Configuration                             #
-#                                 By Loving11ish                                   #
-#                            ------------------------                              #
-#                            --[mc.crapticraft.com]--                              #
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#                                       ----[PosCommands]----                                       #
+#                                     ----[By Loving11ish]----                                      #
+#                                   ----[mc.crapticraft.com]----                                    #
+#                                   ----[Plugin Config File]----                                    #
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
 
 #This is for the first block combination
 #This sets the combination of blocks that the player walks over to trigger the commands.
@@ -24,15 +23,19 @@ Bottom-Trigger-Block-1: BEDROCK
 #Enter the commands below, up to 4 commands can be triggered simultaneously.
 #All commands are executed by the player not the console, therefore the players must have the relevant permissions assigned.
 1-Command-1-enabled: true
+1-run-as-console-1: false
 1-Command-1: 'kit starter'
 
 1-Command-2-enabled: false
+1-run-as-console-2: false
 1-Command-2: 'enjin points'
 
 1-Command-3-enabled: false
+1-run-as-console-3: false
 1-Command-3: 'warp spawn'
 
 1-Command-4-enabled: false
+1-run-as-console-4: false
 1-Command-4: ''
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
@@ -53,15 +56,19 @@ Bottom-Trigger-Block-2: REDSTONE_BLOCK
 #Enter the commands below, up to 4 commands can be triggered simultaneously.
 #All commands are executed by the player not the console, therefore the players must have the relevant permissions assigned.
 2-Command-1-enabled: false
+2-run-as-console-1: false
 2-Command-1: 'rules'
 
 2-Command-2-enabled: false
+2-run-as-console-2: false
 2-Command-2: ''
 
 2-Command-3-enabled: false
+2-run-as-console-3: false
 2-Command-3: ''
 
 2-Command-4-enabled: false
+2-run-as-console-4: false
 2-Command-4: ''
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
@@ -82,15 +89,19 @@ Bottom-Trigger-Block-3: OBSIDIAN
 #Enter the commands below, up to 4 commands can be triggered simultaneously.
 #All commands are executed by the player not the console, therefore the players must have the relevant permissions assigned.
 3-Command-1-enabled: false
+3-run-as-console-1: false
 3-Command-1: ''
 
 3-Command-2-enabled: false
+3-run-as-console-2: false
 3-Command-2: ''
 
 3-Command-3-enabled: false
+3-run-as-console-3: false
 3-Command-3: ''
 
 3-Command-4-enabled: false
+3-run-as-console-4: false
 3-Command-4: ''
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
@@ -111,15 +122,53 @@ Bottom-Trigger-Block-4: SPRUCE_LOG
 #Enter the commands below, up to 4 commands can be triggered simultaneously.
 #All commands are executed by the player not the console, therefore the players must have the relevant permissions assigned.
 4-Command-1-enabled: false
+4-run-as-console-1: false
 4-Command-1: ''
 
 4-Command-2-enabled: false
+4-run-as-console-2: false
 4-Command-2: ''
 
 4-Command-3-enabled: false
+4-run-as-console-3: false
 4-Command-3: ''
 
 4-Command-4-enabled: false
+4-run-as-console-4: false
 4-Command-4: ''
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#                                       ----[PosCommands]----                                       #
+#                                     ----[By Loving11ish]----                                      #
+#                                   ----[mc.crapticraft.com]----                                    #
+#                                 ----[Plugin Messages Config]----                                  #
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
+
+#This section allows you to configure the plugins messages to suit your needs.
+#Traditional color codes can be used here or the 1.16+ HEX codes are also supported.
+
+#Plugin responses
+
+#Config-reload-success:
+Reload-1: "&e[---------------------------------------------------]"
+Reload-2: "&aConfiguration file has been successfully reloaded!"
+Reload-3: "&e[---------------------------------------------------]"
+
+Reload-command-no-permission: "&4You do not have the permission &eposCommands.reload &4needed to run that command!"
+
+#Plugin-update-available:
+Update-1: "&4*-------------------------------------------*"
+Update-2: "&b[PosCommands] &c- A new version is available!"
+Update-3: "&4*-------------------------------------------*"
+
+#Plugin-no-new-update:
+No-update-1: "&a*-------------------------------------------*"
+No-update-2: "&b[PosCommands] &a- Plugin is up to date!"
+No-update-3: "&a*-------------------------------------------*"
+Update-check-failure: "&b[PosCommand] &4- Unable to check for updates! - &c"
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#
