Updated GitHub repository. Added TCoded's FoliaLib. Added native Folia support. Added 1.19.4 Support. Changed to Java 17. Fixed small code error in ReloadConfigCommand. Changed plugin version to `3.8.2`.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -45,7 +45,7 @@ Bottom-Trigger-Block-1: BEDROCK
 
 1-Command-2-enabled: false
 1-run-as-console-2: false
-1-Command-2: 'enjin points'
+1-Command-2: 'balance'
 
 1-Command-3-enabled: false
 1-run-as-console-3: false
